fix: navbar overlap issue

--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -20,7 +20,7 @@
 .primary-navigation {
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 20;
     top: 0;
 
     @media screen and (max-width: 800px) {
